--- a/front-server/src/main/resources/static/order_confirmation/order_confirmation.html
+++ b/front-server/src/main/resources/static/order_confirmation/order_confirmation.html
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
         <tr ng-repeat="oi in happyUserCart.items">
-            <td>{{oi.productTitle}}</td>
+            <td>{{oi.name}}</td>
             <td>{{oi.quantity}}</td>
             <td>{{oi.quantity + ' x ' + oi.pricePerProduct + ' = ' + oi.price}}</td>
         </tr>
